--- a/videio-crud/package.json
+++ b/videio-crud/package.json
@@ -9,9 +9,11 @@
         "dbfake": "npx json-server --watch db.json"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
+        "@popperjs/core": "^2.6.0",
         "bootstrap": "^5.0.0-beta1",
         "core-js": "^3.6.5",
-        "vue": "^2.6.11",
+        "vue": "^2.6.12",
         "vue-router": "^3.2.0",
         "vuex": "^3.4.0"
     },
